# gb

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
src/gbb/: app.py  cleanup.py  config.py  git.py  kitty.py  main.py  pins.py
tests/: test_app.py  test_cleanup.py  test_config.py  test_git.py
