[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gbb"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.40",
    "pyyaml>=6.0",
    "typer>=0.9",
]

[project.scripts]
gbb = "gbb.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
